- Quick Filter input values validation - Lovbox - onOk event (enter) fixed (javascript bandbox fix) - Paging - detail info
git-svn-id: http://zk-dl.googlecode.com/svn/trunk@51 14f4ca54-e300-ebc0-3ca8-cadf33e97b03

--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
@@ -15,6 +15,7 @@ filter.operators.between=Je mezi
 quickFilter.tooltip.filterRange=Rozsah filtrování
 quickFilter.tooltip.openFilter=Otevřít filtr
 quickFilter.menu.all=Vše
+quickFilter.validation.failed=Nesprávná hodnota pro filtr
 
 lovbox.clear=Vymazat
 
@@ -51,3 +52,5 @@ listbox.exportManager.displayed=Zobrazené položky
 listbox.exportManager.recordCount=Počet záznamů k exportu (0 = vše, max. 36000)
 listbox.exportManager.sheetName=Název listu
 listbox.exportManager.fileName=Název souboru
+
+listbox.paging.noData=Prázdný seznam
