Localization of sorting messages (ascending, descending)
git-svn-id: http://zk-dl.googlecode.com/svn/trunk@63 14f4ca54-e300-ebc0-3ca8-cadf33e97b03

--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
@@ -36,6 +36,9 @@ listbox.columnManager.displayed=Zobrazené položky
 listbox.sortingManager.title=Správce řazení
 listbox.sortingManager.column=Sloupec
 listbox.sortingManager.sort=Řadit
+listbox.sortingManager.sort.ascending=Vzestupně
+listbox.sortingManager.sort.natural=Neřadit
+listbox.sortingManager.sort.descending=Sestupně
 listbox.sortingManager.number=#N
 
 listbox.filterManager.title=Správce filtrování
