Upgrade to latest 1.3.x version
git-svn-id: http://zk-dl.googlecode.com/svn/trunk@161 14f4ca54-e300-ebc0-3ca8-cadf33e97b03

--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
@@ -57,3 +57,9 @@ listbox.exportManager.sheetName=Název listu
 listbox.exportManager.fileName=Název souboru
 
 listbox.paging.noData=Prázdný seznam
+
+
+listbox.manager.reset.message.title=Resetovat vše
+listbox.manager.reset.message.text=Opravdu chcete všechna nastavení resetovat?
+listbox.manager.resetFilter.message.title=Resetovat filtry
+listbox.manager.resetFilter.message.text=Opravdu chcete resetovat filtry?
