ZK-174 Export to MS Excel is blocking
 - for huge data models the export can last couple seconds
 - since now the operation uses EchoEvent and blocks UI until it finishes

--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
@@ -55,6 +55,7 @@ listbox.exportManager.displayed=Zobrazené položky
 listbox.exportManager.recordCount=Počet záznamů k exportu (0 = vše, max. 36000)
 listbox.exportManager.sheetName=Název listu
 listbox.exportManager.fileName=Název souboru
+listbox.exportManager.wait=Prosím počkejte ...
 
 listbox.paging.noData=Prázdný seznam
 
