Major rewrite of DL components - created widget (javascript) classes and moved to standard component development.

--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
@@ -58,7 +58,7 @@ listbox.exportManager.fileName=Název souboru
 listbox.exportManager.wait=Prosím počkejte ...
 
 listbox.paging.noData=Prázdný seznam
-
+listbox.paging.outOfRange=Zadaná stránka je mimo rozsah...
 
 listbox.manager.reset.message.title=Resetovat vše
 listbox.manager.reset.message.text=Opravdu chcete všechna nastavení resetovat?
