ZISWEB-440 - New annotation @ZkRole - handle access rights

--- a/ZKComposer/src/main/resources/metainfo/i3-label_cs.properties
+++ b/ZKComposer/src/main/resources/metainfo/i3-label_cs.properties
@@ -1,4 +1,6 @@
 zkcomposer.cancel=Zrušit
 zkcomposer.bePatient=Tato operace může trvat dlouho. Strpení prosím ...
+zkcomposer.accessDenied.title=Přístup odepřen
+zkcomposer.accessDenied.message=Pro tuto akci nemáte odpovídající oprávnění.
 zkcomposer.detail.opened.title=Okno je již otevřeno
 zkcomposer.detail.opened.message=Detailní okno je již otevřeno
