Java version set to 1.6 DL Profile manager component (snapshot version)

--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
@@ -62,3 +62,8 @@ listbox.manager.reset.message.title=Resetovat vše
 listbox.manager.reset.message.text=Opravdu chcete všechna nastavení resetovat?
 listbox.manager.resetFilter.message.title=Resetovat filtry
 listbox.manager.resetFilter.message.text=Opravdu chcete resetovat filtry?
+
+listbox.profileManager.load=Načíst
+listbox.profileManager.load.tooltip=Načíst profil
+listbox.profileManager.save=Uložit
+listbox.profileManager.save.tooltip=Uložit profil
