DLListbox profile edit (unfinished)

--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
@@ -67,3 +67,6 @@ listbox.profileManager.load=Načíst
 listbox.profileManager.load.tooltip=Načíst profil
 listbox.profileManager.save=Uložit
 listbox.profileManager.save.tooltip=Uložit profil
+listbox.profileManager.profile.name=Název profilu
+listbox.profileManager.profile.public=Veřejný profil
+listbox.profileManager.profile.default=Výchozí profil
