DLListbox profile edit

--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
@@ -64,9 +64,15 @@ listbox.manager.resetFilter.message.title=Resetovat filtry
 listbox.manager.resetFilter.message.text=Opravdu chcete resetovat filtry?
 
 listbox.profileManager.load=Načíst
-listbox.profileManager.load.tooltip=Načíst profil
+listbox.profileManager.load.tooltip=Načíst nastavení agendy z profilu
 listbox.profileManager.save=Uložit
-listbox.profileManager.save.tooltip=Uložit profil
+listbox.profileManager.save.tooltip=Uložit nastavení agendy do zvoleného profilu
+listbox.profileManager.edit=Editovat
+listbox.profileManager.edit.tooltip=Editovat parametry profilu
+listbox.profileManager.create=Nový
+listbox.profileManager.create.tooltip=Uložit nastavení agendy do nového profilu
+listbox.profileManager.delete=Smazat
+listbox.profileManager.delete.tooltip=Smazat profil
 listbox.profileManager.profile.name=Název profilu
 listbox.profileManager.profile.public=Veřejný profil
 listbox.profileManager.profile.default=Výchozí profil
