DLListbox profile (RC version)

--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
@@ -69,10 +69,12 @@ listbox.profileManager.save=Uložit
 listbox.profileManager.save.tooltip=Uložit nastavení agendy do zvoleného profilu
 listbox.profileManager.edit=Editovat
 listbox.profileManager.edit.tooltip=Editovat parametry profilu
-listbox.profileManager.create=Nový
+listbox.profileManager.create=Nový profil
 listbox.profileManager.create.tooltip=Uložit nastavení agendy do nového profilu
 listbox.profileManager.delete=Smazat
 listbox.profileManager.delete.tooltip=Smazat profil
+listbox.profileManager.delete.confirm=Opravdu chcete smazat profil {0}?
 listbox.profileManager.profile.name=Název profilu
 listbox.profileManager.profile.public=Veřejný profil
 listbox.profileManager.profile.default=Výchozí profil
+listbox.profileManager.profile.saveAgendaSettings=Uložit současné nastavení agendy
