New dlprofilemanager zul arguments, improved profile edit window

--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
@@ -75,6 +75,9 @@ listbox.profileManager.delete=Smazat
 listbox.profileManager.delete.tooltip=Smazat profil
 listbox.profileManager.delete.confirm=Opravdu chcete smazat profil {0}?
 listbox.profileManager.profile.name=Název profilu
+listbox.profileManager.profile.type=Typ profilu
 listbox.profileManager.profile.public=Veřejný profil
+listbox.profileManager.profile.private=Soukromý profil
 listbox.profileManager.profile.default=Výchozí profil
-listbox.profileManager.profile.saveAgendaSettings=Uložit současné nastavení agendy
+listbox.profileManager.profile.saveColumnModel=Uložit současné nastavení sloupců
+listbox.profileManager.profile.saveFilterModel=Uložit současné nastavení filtru
