New columns in profile manager lovbox

--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
@@ -81,3 +81,5 @@ listbox.profileManager.profile.private=Soukromý profil
 listbox.profileManager.profile.default=Výchozí profil
 listbox.profileManager.profile.saveColumnModel=Uložit současné nastavení sloupců
 listbox.profileManager.profile.saveFilterModel=Uložit současné nastavení filtru
+listbox.profileManager.profile.short.public=V
+listbox.profileManager.profile.short.private=S
