--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
@@ -75,11 +75,13 @@ listbox.profileManager.delete=Smazat
 listbox.profileManager.delete.tooltip=Smazat profil
 listbox.profileManager.delete.confirm=Opravdu chcete smazat profil {0}?
 listbox.profileManager.profile.name=Název profilu
-listbox.profileManager.profile.type=Typ profilu
 listbox.profileManager.profile.public=Veřejný profil
 listbox.profileManager.profile.private=Soukromý profil
-listbox.profileManager.profile.default=Výchozí profil
-listbox.profileManager.profile.saveColumnModel=Uložit současné nastavení sloupců
-listbox.profileManager.profile.saveFilterModel=Uložit současné nastavení filtru
+listbox.profileManager.profile.category=Kategorie
+listbox.profileManager.profile.default=Můj výchozí profil
+listbox.profileManager.profile.saveColumnModel=Vložit do profilu aktuální nastavení sloupců
+listbox.profileManager.profile.saveColumnModel.tooltip=Pokud je příznak zaškrtnutý, bude profil obsahovat i nastavení sloupců jak jsou viditelné na aktuální stránce.
+listbox.profileManager.profile.saveFilterModel=Vložit do profilu aktuální nastavení filtru
+listbox.profileManager.profile.saveFilterModel.tooltip=Pokud je příznak zaškrtnutý, bude profil obsahovat i nastavení filtrů jak jsou nastavené na aktuální stránce.
 listbox.profileManager.profile.short.public=V
 listbox.profileManager.profile.short.private=S
