Added filter to column and export manager

--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
@@ -30,6 +30,7 @@ listbox.ok=OK
 listbox.columnManager.title=Správce položek
 listbox.columnManager.hidden=Nezobrazené položky
 listbox.columnManager.displayed=Zobrazené položky
+listbox.columnManager.quickFilter=Filtr
 
 listbox.sortingManager.title=Správce řazení
 listbox.sortingManager.column=Sloupec
