Editing listbox manager windows

--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
@@ -27,9 +27,9 @@ listbox.tooltip.noActiveFilter=žádný aktivní filtr
 listbox.storno=Storno
 listbox.ok=OK
 
-listbox.columnManager.title=Správce položek
-listbox.columnManager.hidden=Nezobrazené položky
-listbox.columnManager.displayed=Zobrazené položky
+listbox.columnManager.title=Správce sloupců
+listbox.columnManager.hidden=Nezobrazené sloupce
+listbox.columnManager.displayed=Zobrazené sloupce
 listbox.columnManager.quickFilter=Filtr
 
 listbox.sortingManager.title=Správce řazení
@@ -49,8 +49,8 @@ listbox.filterManager.add=Přidat
 listbox.filterManager.removeAll=Odebrat vše
 
 listbox.exportManager.title=Správce exportování
-listbox.exportManager.hidden=Nezobrazené položky
-listbox.exportManager.displayed=Zobrazené položky
+listbox.exportManager.hidden=Nezobrazené sloupce
+listbox.exportManager.displayed=Zobrazené sloupce
 listbox.exportManager.recordCount=Počet záznamů k exportu (0 = vše, max. 36000)
 listbox.exportManager.sheetName=Název listu
 listbox.exportManager.fileName=Název souboru
