Listbox export manager - migration from jExcelApi library to Apache POI.

--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
@@ -51,7 +51,7 @@ listbox.filterManager.removeAll=Odebrat vše
 listbox.exportManager.title=Správce exportování
 listbox.exportManager.hidden=Nezobrazené sloupce
 listbox.exportManager.displayed=Zobrazené sloupce
-listbox.exportManager.recordCount=Počet záznamů k exportu (0 = vše, max. 36000)
+listbox.exportManager.recordCount=Počet záznamů k exportu (0 = vše, max = {0})
 listbox.exportManager.sheetName=Název listu
 listbox.exportManager.fileName=Název souboru
 listbox.exportManager.wait=Prosím počkejte ...
