--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
@@ -80,6 +80,7 @@ listbox.profileManager.profile.public=Veřejný profil
 listbox.profileManager.profile.private=Soukromý profil
 listbox.profileManager.profile.category=Kategorie
 listbox.profileManager.profile.default=Můj výchozí profil
+listbox.profileManager.profile.watermark=Vyberte profil
 listbox.profileManager.profile.saveColumnModel=Vložit do profilu aktuální nastavení sloupců
 listbox.profileManager.profile.saveColumnModel.tooltip=Pokud je příznak zaškrtnutý, bude profil obsahovat i nastavení sloupců jak jsou viditelné na aktuální stránce.
 listbox.profileManager.profile.saveFilterModel=Vložit do profilu aktuální nastavení filtru
