lokalizovat "Editovat profilu" na správci profilů

--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
@@ -75,6 +75,7 @@ listbox.profileManager.create.tooltip=Uložit nastavení agendy do nového profi
 listbox.profileManager.delete=Smazat
 listbox.profileManager.delete.tooltip=Smazat profil
 listbox.profileManager.delete.confirm=Opravdu chcete smazat profil {0}?
+listbox.profileManager.profile.edit=Editace profilu
 listbox.profileManager.profile.name=Název profilu
 listbox.profileManager.profile.public=Veřejný profil
 listbox.profileManager.profile.private=Soukromý profil
