Správce exportování- oprava NPE při chybném zadání Počet záznamů nebo Název listu

--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
@@ -56,6 +56,8 @@ listbox.exportManager.sheetName=Název listu
 listbox.exportManager.fileName=Název souboru
 listbox.exportManager.wait=Prosím počkejte ...
 
+listbox.exportManager.error.rows.message=Prosím zadejte počet záznamů k exportu (0 = vše, max = {0})
+
 listbox.paging.noData=Prázdný seznam
 listbox.paging.outOfRange=Zadaná stránka je mimo rozsah...
 
