--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
@@ -57,6 +57,7 @@ listbox.exportManager.fileName=Název souboru
 listbox.exportManager.wait=Prosím počkejte ...
 
 listbox.exportManager.error.rows.message=Prosím zadejte počet záznamů k exportu (0 = vše, max = {0})
+listbox.exportManager.error.fileName.message=Prosím zadejte název exportovaného souboru
 
 listbox.paging.noData=Prázdný seznam
 listbox.paging.outOfRange=Zadaná stránka je mimo rozsah...
