mene desiva zprava

--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
@@ -63,7 +63,7 @@ listbox.paging.noData=Prázdný seznam
 listbox.paging.outOfRange=Zadaná stránka je mimo rozsah...
 
 listbox.manager.reset.message.title=Resetovat vše
-listbox.manager.reset.message.text=Opravdu chcete všechna nastavení resetovat?
+listbox.manager.reset.message.text=Opravdu chcete všechna nastavení seznamu resetovat?
 listbox.manager.resetFilter.message.title=Resetovat filtry
 listbox.manager.resetFilter.message.text=Opravdu chcete resetovat filtry?
 
