Doplnění položky "permissionName" pro určení role, kterou musí mít uživatel, aby mohl editovat příslušný profil

--- a/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
+++ b/ZKDLComponents/src/main/resources/metainfo/zk/zkdlcomponents_cs.properties
@@ -82,6 +82,7 @@ listbox.profileManager.profile.edit=Editace profilu
 listbox.profileManager.profile.name=Název profilu
 listbox.profileManager.profile.public=Veřejný profil
 listbox.profileManager.profile.private=Soukromý profil
+listbox.profileManager.profile.permission=Profil s oprávněním
 listbox.profileManager.profile.category=Kategorie
 listbox.profileManager.profile.default=Můj výchozí profil
 listbox.profileManager.profile.watermark=Vyberte profil
@@ -91,3 +92,4 @@ listbox.profileManager.profile.saveFilterModel=Vložit do profilu aktuální nas
 listbox.profileManager.profile.saveFilterModel.tooltip=Pokud je příznak zaškrtnutý, bude profil obsahovat i nastavení filtrů jak jsou nastavené na aktuální stránce.
 listbox.profileManager.profile.short.public=V
 listbox.profileManager.profile.short.private=S
+listbox.profileManager.profile.short.permission=R
